--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images\IMG_3815 (2).jpg" alt="Konda Jahnavi Profile Photo" width="250"
+      <td><img src="IMG_3815 (2).jpg" alt="Konda Jahnavi Profile Photo" width="250"
          height="300"></td>
       <td><h1>Konda Jahnavi</h1>
       <h3>
